--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.5",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@astrojs/netlify": "^6.6.3"
   }
 }
